# autonom

./: .gitignore  Pipfile  README.md  README.rst  pyproject.toml  setup.py
autonom/: __init__.py  __main__.py  client.py  job_processor.py  task_executor.py  util.py
data/: sample_job_document.json
scripts/: autonom
supervisor/: autonom.ini
systemd/: autonom.service
tests/: test_autonom.py
